fix dynamic display and spacing

--- a/viz-exp.css
+++ b/viz-exp.css
@@ -2,6 +2,7 @@
 #waste {display:none;}
 #mit {display:none;}
 #doe {display:none;}
+#dynamic {display:none;}
 
 div.heading  {  
   left:10%;  width:80%; height: 20%; position:absolute;
@@ -34,14 +35,14 @@ div.chartrow {
 div.chart { 
   position:initial;
   width:33%;
-  height:90%;
+  height:85%;
   float:left;
  }
 
 div.footer
 {
 position:absolute;
-top: 90%;
+top: 85%;
 width:100%;
 height:5%;
 text-align:center;
